syntax = "proto3";

package org.igooo.grpc;

message UserRequest {
  string name = 1;
  int32 age = 2;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message Empty {

}

service UserManagement {
  rpc CreateUser(UserRequest) returns (UserResponse) {}
  rpc FindUsers(Empty) returns (stream UserResponse) {}
}
